Add a special toolchain for duetto

--- a/clang/lib/Driver/CMakeLists.txt
+++ b/clang/lib/Driver/CMakeLists.txt
@@ -19,6 +19,7 @@ add_clang_library(clangDriver
   Distro.cpp
   Driver.cpp
   DriverOptions.cpp
+  DuettoToolChain.cpp
   Job.cpp
   Multilib.cpp
   OffloadBundler.cpp
