--- a/clang/lib/CodeGen/CMakeLists.txt
+++ b/clang/lib/CodeGen/CMakeLists.txt
@@ -27,7 +27,7 @@ set(LLVM_LINK_COMPONENTS
   Support
   Target
   TransformUtils
-  DuettoUtils
+  CheerpUtils
   )
 
 add_clang_library(clangCodeGen
