--- a/clang/lib/Driver/CMakeLists.txt
+++ b/clang/lib/Driver/CMakeLists.txt
@@ -19,7 +19,7 @@ add_clang_library(clangDriver
   Distro.cpp
   Driver.cpp
   DriverOptions.cpp
-  DuettoToolChain.cpp
+  CheerpToolChain.cpp
   Job.cpp
   Multilib.cpp
   OffloadBundler.cpp
