--- a/clang/lib/CodeGen/CMakeLists.txt
+++ b/clang/lib/CodeGen/CMakeLists.txt
@@ -71,6 +71,7 @@ add_clang_library(clangCodeGen
   CGVTables.cpp
   CodeGenABITypes.cpp
   CodeGenAction.cpp
+  CodeGenCheerp.cpp
   CodeGenFunction.cpp
   CodeGenModule.cpp
   CodeGenPGO.cpp
