--- a/llvm/CMakeLists.txt
+++ b/llvm/CMakeLists.txt
@@ -8,6 +8,10 @@ include(${LLVM_COMMON_CMAKE_UTILS}/Modules/CMakePolicy.cmake
 
 set(CMAKE_BUILD_WITH_INSTALL_NAME_DIR ON)
 
+if(POLICY CMP0079)
+  cmake_policy(SET CMP0079 NEW)
+endif()
+
 if(NOT DEFINED LLVM_VERSION_MAJOR)
   set(LLVM_VERSION_MAJOR 16)
 endif()
