Renamed SIMDLowering to SIMDTransform

--- a/llvm/lib/CheerpUtils/CMakeLists.txt
+++ b/llvm/lib/CheerpUtils/CMakeLists.txt
@@ -29,7 +29,7 @@ add_llvm_component_library(LLVMCheerpUtils
   CheerpLowerInvoke.cpp
   SinkGenerator.cpp
   CallConstructors.cpp
-  SIMDLowering.cpp
+  SIMDTransform.cpp
   )
 
 add_dependencies(LLVMCheerpUtils intrinsics_gen)
