libcxx: Remove unsupported experimental feature

--- a/libcxx/src/CMakeLists.txt
+++ b/libcxx/src/CMakeLists.txt
@@ -338,6 +338,9 @@ set(LIBCXX_EXPERIMENTAL_SOURCES
   format.cpp
   )
 
+# Cheerp: Remove experimental
+list(REMOVE_ITEM LIBCXX_EXPERIMENTAL_SOURCES "experimental/memory_resource.cpp")
+
 add_library(cxx_experimental STATIC ${LIBCXX_EXPERIMENTAL_SOURCES})
 target_link_libraries(cxx_experimental PUBLIC cxx-headers)
 if (LIBCXX_ENABLE_SHARED)
