--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1118,7 +1118,7 @@ commands:
           command: |
             mkdir build-tblgen
             cd build-tblgen
-            cmake -DLLVM_ENABLE_PROJECTS=clang ../llvm/ -GNinja
+            cmake -DLLVM_ENABLE_PROJECTS=clang -DCMAKE_BUILD_TYPE=Release ../llvm/ -GNinja
             ninja llvm-tblgen clang-tblgen
   mount-template-dmg:
     steps:
