CheerpWriter: Add a pass to optimize away client::String creation from constant strings
We encode the string into metadata so that the global itself can be dropped

--- a/llvm/lib/CheerpUtils/CMakeLists.txt
+++ b/llvm/lib/CheerpUtils/CMakeLists.txt
@@ -32,6 +32,7 @@ add_llvm_component_library(LLVMCheerpUtils
   SIMDLowering.cpp
   SIMDTransform.cpp
   BitCastLowering.cpp
+  JSStringLiteralLowering.cpp
   )
 
 add_dependencies(LLVMCheerpUtils intrinsics_gen)
