--- a/debian/rules
+++ b/debian/rules
@@ -3,7 +3,13 @@
 deb_version := $(shell dpkg-parsechangelog | sed -n 's/^Version: //p')
 ifndef CIRCLECI
 	FLAGS_RELEASE="-DNDEBUG -O2"
+	USE_CCACHE=Off
 else
+	ifeq (${CIRCLE_BRANCH}, master)
+		USE_CCACHE=Off
+	else
+		USE_CCACHE=On
+	endif
 	FLAGS_RELEASE="-O2"
 endif
 
@@ -25,6 +31,7 @@ override_dh_auto_configure:
 		-DCMAKE_EXE_LINKER_FLAGS=-fuse-ld=lld \
 		-DCMAKE_SHARED_LINKER_FLAGS=-fuse-ld=lld \
 		-DCMAKE_MODULE_LINKER_FLAGS=-fuse-ld=lld \
+		-DLLVM_CCACHE_BUILD=${USE_CCACHE}
 
 override_dh_auto_install:
 	cd build && DESTDIR=${PWD}/debian/tmp ninja install-distribution
