Introduce CheerpLowerAtomic pass
This pass is meant to remove atomics by invoking the existing LowerAtomicPass
only on genericjs functions.

--- a/llvm/lib/CheerpUtils/CMakeLists.txt
+++ b/llvm/lib/CheerpUtils/CMakeLists.txt
@@ -33,6 +33,7 @@ add_llvm_component_library(LLVMCheerpUtils
   BitCastLowering.cpp
   JSStringLiteralLowering.cpp
   MemoryInit.cpp
+  CheerpLowerAtomic.cpp
   )
 
 add_dependencies(LLVMCheerpUtils intrinsics_gen)
