--- a/compiler-rt/debian/rules
+++ b/compiler-rt/debian/rules
@@ -1,13 +1,16 @@
 #!/usr/bin/make -f
 
+ifdef CIRCLECI
+	LLVM_DIR_OPT=-DLLVM_DIR="$(PWD)/build/lib/cmake/llvm"
+endif
+
 %:
 	dh $@
 
 override_dh_auto_configure:
-	ls -lRa /root/project/cheerp-compiler/build/lib/cmake/llvm
 	cmake -S compiler-rt -B build_compiler_rt_wasm \
 		-C compiler-rt/CheerpCmakeConf.cmake \
-		-DCMAKE_BUILD_TYPE=Release -DLLVM_DIR="$(PWD)/build/lib/cmake/llvm" \
+		-DCMAKE_BUILD_TYPE=Release ${LLVM_DIR_OPT} \
 		-DCMAKE_TOOLCHAIN_FILE="/opt/cheerp/share/cmake/Modules/CheerpWasmToolchain.cmake"
 
 override_dh_auto_build:
