--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,11 +33,16 @@ jobs:
           name: Setup ccache
           command: |
             mkdir /ccache
-      - restore_cache:
-          name: Restore ccache
-          keys:
-            - cheerp-compiler-<< pipeline.git.branch >>-
-            - cheerp-compiler-
+      - when:
+          condition:
+            not:
+              equal: [ master, << pipeline.git.branch >> ]
+          steps:
+            - restore_cache:
+                name: Restore ccache
+                keys:
+                  - cheerp-compiler-<< pipeline.git.branch >>-
+                  - cheerp-compiler-
       - run:
           name: Set up environment
           working_directory: ~/project/cheerp-compiler
