fixup! cheerpwriter: don't use optional chaining operator

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -963,7 +963,7 @@ parameters:
     default: "master"
   cheerp-libs-commit:
     type: string
-    default: "feat-env"
+    default: "master"
 
 executors:
   cheerp-large:
