Renames the InitMemoryPass to FinalizeMemoryInfo, moves the addFunctions() from the linearMemoryHelper after the computing of constant offsets

--- a/llvm/lib/CheerpUtils/CMakeLists.txt
+++ b/llvm/lib/CheerpUtils/CMakeLists.txt
@@ -32,7 +32,7 @@ add_llvm_component_library(LLVMCheerpUtils
   SIMDTransform.cpp
   BitCastLowering.cpp
   JSStringLiteralLowering.cpp
-  MemoryInit.cpp
+  FinalizeMemoryInfo.cpp
   CheerpLowerAtomic.cpp
   JsExport.cpp
   )
