--- a/llvm/lib/CheerpUtils/CMakeLists.txt
+++ b/llvm/lib/CheerpUtils/CMakeLists.txt
@@ -35,6 +35,7 @@ add_llvm_component_library(LLVMCheerpUtils
   MemoryInit.cpp
   CheerpLowerAtomic.cpp
   JsExport.cpp
+  UnionOptimizer.cpp
   )
 
 add_dependencies(LLVMCheerpUtils intrinsics_gen)
